# ros_manipulation

essential_pkgs/: CMakeLists.txt  package.xml
essential_pkgs/src/: mg_interface.cpp  work_scene_dev.cpp
kinova_pick_place/: CMakeLists.txt
kinova_pick_place/src/: jaco_pick_place.cpp
move_group_interface_examples/: CMakeLists.txt  package.xml
move_group_interface_examples/include/: move_group_tools.h
move_group_interface_examples/src/: move_group_interface_example_class.cpp  move_group_tools.cpp  move_group_tools_demo.cpp
ros_manipulation/: CMakeLists.txt  package.xml
ros_manipulation/launch/: display.launch  gazebo.launch  r2d2_sim.launch
ros_manipulation/rviz/: urdf.rviz
ros_manipulation/urdf/r2d2/: r2d2.urdf.xacro  r2d2_gazebo.xacro  r2d2_transmission.xacro
rrbot/: README.md
rrbot/rrbot_bringup/: CMakeLists.txt  package.xml
rrbot/rrbot_bringup/launch/: rrbot_robot.launch
rrbot/rrbot_control/config/: rrbot_control.yaml
rrbot/rrbot_control/launch/: rrbot_control.launch
rrbot/rrbot_description/: CMakeLists.txt  package.xml
rrbot/rrbot_description/model/: rrbot.gazebo.xacro  rrbot.urdf.xacro
rrbot/rrbot_description/robots/: single_rrbot.urdf.xacro
rrbot/rrbot_gazebo/launch/: rrbot_world.launch
rrbot/rrbot_moveit_config/: .setup_assistant  package.xml
rrbot/rrbot_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  single_rrbot.srdf
rrbot/rrbot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  moveit_rviz.launch  planning_context.launch  ros_controllers.launch  rrbot_gazebo.launch  rrbot_move_group.launch  sensor_manager.launch.xml  setup_assistant.launch  single_rrbot_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml
