<?xml version="1.0"?>
<package format="2">
  <name>essential_pkgs</name>
  <version>0.0.0</version>
  <description>The essential_pkgs package</description>

   <license>BSD</license>

  <author email="abhinand4as@gmail.com">Abhinand A S</author>
  <maintainer email="abhinand4as@gmail.com">Abhinand A S</maintainer>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>rviz_visual_tools</build_depend>
  <build_depend>moveit_visual_tools</build_depend>

  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>rviz_visual_tools</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
</package>
